--- a/main.html
+++ b/main.html
@@ -381,7 +381,7 @@
       <p>
         Unauthorized reverse-engineering, cracking, deobfuscation, or misuse of this tool is strictly forbidden. If such activity is detected, your license/key will be immediately revoked without refund.
       </p>
-      <p>You agree to use this tool responsibly and lawfully.</p>
+      <p>You agree to use this tool responsibly and lawfully and if you do not you will lose your key and there will be no refund.</p>
     </div>
   </div>
 
