--- a/main.html
+++ b/main.html
@@ -259,52 +259,59 @@
 </head>
 <body>
 
-  <script>
-    for (let i = 0; i < 12; i++) {
-      const smoke = document.createElement('div');
-      smoke.className = 'smoke';
-      smoke.style.left = Math.random() * 100 + 'vw';
-      smoke.style.top = Math.random() * 2000 + 'px';
-      smoke.style.animationDelay = (Math.random() * 20) + 's';
-      document.body.appendChild(smoke);
-    }
+<script>
+  for (let i = 0; i < 12; i++) {
+    const smoke = document.createElement('div');
+    smoke.className = 'smoke';
+    smoke.style.left = Math.random() * 100 + 'vw';
+    smoke.style.top = Math.random() * 2000 + 'px';
+    smoke.style.animationDelay = (Math.random() * 20) + 's';
+    document.body.appendChild(smoke);
+  }
 
-    // Check if the user is on a mobile device
-    const isMobile = /Mobi|Android/i.test(navigator.userAgent);
+  // Check if the user is on a mobile device
+  const isMobile = /Mobi|Android/i.test(navigator.userAgent);
 
-    function toggleSection(sectionId) {
-      // Close all other sections
-      const sections = document.querySelectorAll('.dropdown-section');
-      sections.forEach(section => {
-        if (section.id !== sectionId) {
-          section.classList.remove('show');
-        }
-      });
-
-      // Toggle the selected section
-      const selectedSection = document.getElementById(sectionId);
-      selectedSection.classList.toggle('show');
-    }
-
-    function confirmPurchase() {
-      const tosAgreed = document.getElementById('tosCheck').checked;
-      const payment = document.getElementById('paymentType').value;
-      const duration = document.getElementById('duration').value;
-      if (!tosAgreed) {
-        alert("You must agree to the Terms of Service before purchasing.");
-        return;
+  function toggleSection(sectionId) {
+    // Close all other sections
+    const sections = document.querySelectorAll('.dropdown-section');
+    sections.forEach(section => {
+      if (section.id !== sectionId) {
+        section.classList.remove('show');
       }
+    });
+
+    // Toggle the selected section
+    const selectedSection = document.getElementById(sectionId);
+    selectedSection.classList.toggle('show');
+  }
+
+  function confirmPurchase() {
+    const tosAgreed = document.getElementById('tosCheck').checked;
+    const payment = document.getElementById('paymentType').value;
+    const duration = document.getElementById('duration').value;
+    if (!tosAgreed) {
+      alert("You must agree to the Terms of Service before purchasing.");
+      return;
+    }
+
+    if (payment === "Cash App") {
+      // Redirect to the Cash App link
+      window.location.href = "https://cash.app/$m0dzzzz";
+    } else {
       alert(`You selected ${duration.toUpperCase()} plan with ${payment}. Proceeding to payment...`);
     }
+  }
 
-    function showModal() {
-      document.getElementById("tosModal").style.display = "block";
-    }
+  function showModal() {
+    document.getElementById("tosModal").style.display = "block";
+  }
 
-    function closeModal() {
-      document.getElementById("tosModal").style.display = "none";
-    }
-  </script>
+  function closeModal() {
+    document.getElementById("tosModal").style.display = "none";
+  }
+</script>
+
 
   <div class="content">
     <h1>Vape Multi Tool</h1>
@@ -327,7 +334,7 @@
         <li>Apple Pay - $14.99</li>
         <li>Cash app - $14.99</li>
         <li>Card - $14.99</li>
-        <li>Crypto (BTC/ETH) - $14.99</li>
+        <li>Crypto (BTC & Solana) - $14.99</li>
       </ul>
     </div>
 
@@ -339,7 +346,7 @@
         <option value="Apple Pay">Apple Pay</option>
         <option value="Cash App">Cash App</option>
         <option value="Card">Card</option>
-        <option value="Crypto">Crypto (BTC, Solana, ETH)</option>
+        <option value="Crypto">Crypto (BTC & Solana)</option>
       </select>
 
       <label for="duration">Subscription Type:</label>
